--- a/templates/index.twig
+++ b/templates/index.twig
@@ -2,7 +2,7 @@
 {% block main %}
     {# Make a call to the zomato API #}
     {% set resturants = searchZomato() %}
-    {# {{resturants|json_encode()}} #}
+    <pre id="json" style="text-align:left; display: none">{{resturants|json_encode(constant('JSON_PRETTY_PRINT'))}}</pre>
     {% for restaurant in resturants %}
         <img src={{ restaurant.restaurant.featured_image  }} style="width: 100px; height: 100px;">
         <p>{{ restaurant.restaurant.name  }}</p>
